# newsflash

./: .gitignore  README.md  config.py  flasher.py  newsflash.py  newsflash.service  newsflash.toml.example  pyproject.toml  readme.md
src/: config.py  daemon.py  flasher.py  newsflash.py
tests/: test_newsflash.py
