[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "newsflash"
version = "0.1.0"
description = "Flash device LEDs when notifications are recieved"
readme = "README.md"
license = { text = "WTFPL" }
requires-python = ">=3.9"
dependencies = [
    "dbus-python",
    "PyGObject",
    "inotify-simple",
    # tomllib is built-in for Python ≥ 3.11; older releases need tomli
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
newsflash = "newsflash:main"

[tool.setuptools]
py-modules = ["newsflash", "config", "flasher"]
